--- a/code/source/pug/photo.pug
+++ b/code/source/pug/photo.pug
@@ -4,7 +4,7 @@ md-content.photoBackground(ng-cloak ng-controller='photoController as phc' layou
   md-card
     md-card-header
       md-card-avatar
-        img.avatar(src="../img/avatar.png")
+        img.avatar(src="../img/avatar.jpg")
       md-card-header-text
         span.username {{username}}
     div.imageContainer(style='background-image: url("{{imagePath}}")')
