--- a/code/static/css/layout.css
+++ b/code/static/css/layout.css
@@ -1,5 +1,1 @@
-#all {
-  overflow: scroll; }
-
-md-content.md-default-theme {
-  color: #525252; }
+#all{overflow:scroll}md-content.md-default-theme{color:#525252}
