--- a/code/static/css/newPost.css
+++ b/code/static/css/newPost.css
@@ -1,16 +1,3 @@
-.newPostBackground {
-  background-color: #f2f2f2 !important;
-  height: 100%; }
-  .newPostBackground .title {
-    margin: 8px 0px 0px 0px; }
-  .newPostBackground .simpleTextarea {
-    border: 0;
-    outline: none;
-    resize: none; }
-  .newPostBackground .addFriend {
-    margin: 0px;
-    padding: 8px;
-    text-align: left;
-    color: #525252; }
-    .newPostBackground .addFriend md-icon {
-      margin: 0px 8px 0px 8px; }
+.newPostBackground{background-color:#f2f2f2 !important;height:100%}.newPostBackground .title{margin:8px 0 0 0}
+.newPostBackground .simpleTextarea{border:0;outline:0;resize:none}.newPostBackground .addFriend{margin:0;padding:8px;text-align:left;color:#525252}
+.newPostBackground .addFriend md-icon{margin:0 8px 0 8px}
