--- a/code/static/css/others.css
+++ b/code/static/css/others.css
@@ -1,54 +1,10 @@
-.othersBackground {
-  background-color: #f2f2f2 !important; }
-  .othersBackground .othersToolbar {
-    background-color: #ffffff !important;
-    height: 88px;
-    color: #525252 !important;
-    overflow: scroll !important; }
-    .othersBackground .othersToolbar .userContainer {
-      text-align: center;
-      margin: 0px 8px 0px 8px; }
-      .othersBackground .othersToolbar .userContainer .avatar {
-        width: 48px;
-        height: 48px;
-        border-radius: 24px; }
-      .othersBackground .othersToolbar .userContainer .name {
-        height: 24px;
-        font-size: 0.7em;
-        text-align: center; }
-  .othersBackground .cardContainer {
-    width: 100%;
-    background-color: #f2f2f2 !important; }
-    .othersBackground .cardContainer .space {
-      width: 280px; }
-    .othersBackground .cardContainer md-card-header {
-      height: 40px; }
-      .othersBackground .cardContainer md-card-header .avatar {
-        height: 40px;
-        width: 40px;
-        border-radius: 20px; }
-      .othersBackground .cardContainer md-card-header .username {
-        font-size: 1.16em;
-        color: #525252;
-        line-height: 40px;
-        padding: 0px 0px 0px 16px; }
-  .othersBackground .cardImg {
-    height: 212px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    -webkit-background-size: cover; }
-  .othersBackground md-card-content {
-    color: #525252 !important; }
-    .othersBackground md-card-content p {
-      font-size: 1.16em; }
-  .othersBackground .addButton {
-    position: fixed;
-    right: 12px;
-    bottom: 12px; }
-    .othersBackground .addButton .menuButton {
-      padding: 0px !important;
-      font-weight: normal;
-      color: #525252 !important;
-      font-size: 0.6em;
-      min-width: 64px; }
+.othersBackground{background-color:#f2f2f2 !important}.othersBackground .othersToolbar{background-color:#fff !important;height:88px;color:#525252 !important;overflow:scroll !important}
+.othersBackground .othersToolbar .userContainer{text-align:center;margin:0 8px 0 8px}
+.othersBackground .othersToolbar .userContainer .avatar{width:48px;height:48px;border-radius:24px}
+.othersBackground .othersToolbar .userContainer .name{height:24px;font-size:.7em;text-align:center}
+.othersBackground .cardContainer{width:100%;background-color:#f2f2f2 !important}.othersBackground .cardContainer .space{width:280px}
+.othersBackground .cardContainer md-card-header{height:40px}.othersBackground .cardContainer md-card-header .avatar{height:40px;width:40px;border-radius:20px}
+.othersBackground .cardContainer md-card-header .username{font-size:1.16em;color:#525252;line-height:40px;padding:0 0 0 16px}
+.othersBackground .cardImg{height:212px;background-repeat:no-repeat;background-position:center center;background-size:cover;-webkit-background-size:cover}
+.othersBackground md-card-content{color:#525252 !important}.othersBackground md-card-content p{font-size:1.16em}
+.othersBackground .addButton{position:fixed;right:12px;bottom:12px}.othersBackground .addButton .menuButton{padding:0 !important;font-weight:normal;color:#525252 !important;font-size:.6em;min-width:64px}
