--- a/code/static/css/timeline.css
+++ b/code/static/css/timeline.css
@@ -1,25 +1,4 @@
-.timelineBackground {
-  background-color: #f2f2f2 !important;
-  position: relative; }
-  .timelineBackground .firstSpace {
-    height: 88px; }
-  .timelineBackground .space {
-    height: 45.3333333333px; }
-  .timelineBackground .timeNodeContainer {
-    width: 56px;
-    position: relative; }
-    .timelineBackground .timeNodeContainer .timeline {
-      position: absolute;
-      left: 26px;
-      width: 2.5px;
-      height: 100%;
-      background-color: #E91E63; }
-    .timelineBackground .timeNodeContainer .timeNode {
-      position: absolute; }
-  .timelineBackground .imageContainer {
-    width: 100%;
-    height: 120px;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    -webkit-background-size: cover; }
+.timelineBackground{background-color:#f2f2f2 !important;position:relative}.timelineBackground .firstSpace{height:88px}
+.timelineBackground .space{height:45.3333333333px}.timelineBackground .timeNodeContainer{width:56px;position:relative}
+.timelineBackground .timeNodeContainer .timeline{position:absolute;left:26px;width:2.5px;height:100%;background-color:#e91e63}
+.timelineBackground .timeNodeContainer .timeNode{position:absolute}.timelineBackground .imageContainer{width:100%;height:120px;background-repeat:no-repeat;background-position:center center;background-size:cover;-webkit-background-size:cover}
